# simple-chatbot

./: .gitignore  README.md  activate.sh  app.py  clean.sh  env.example  pyproject.toml  rag_system.py  requirements.txt  run.py  setup.sh  start.sh  start_fastapi.sh  test.http  test_api.py
.cursor/rules/: chatbot-base.mdc
example_documents/: company_guide.txt  sample.txt
static/: index.html
